<resources>
    <string name="app_name">TripPlan</string>

    <!-- Login / register / recover password -->
    <string name="bLogin">Login</string>
    <string name="bRegister">Register</string>
    <string name="bRecover">Recover password</string>
    <string name="etName">Name</string>
    <string name="etSurname">Surname</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="etConfirmPassword">Confirm password</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- keys -->
    <string name="api_key" translatable="false">AIzaSyDvz6yilc-vfRRlTgMUJMRRwYdl394fuzM</string>

    <!-- Create trip -->
    <string name="etTripName">Trip name</string>
    <string name="BeginingDate">Begining date</string>
    <string name="EndDate">End date</string>
    <string name="tvTripType">Trip type</string>
    <string-array name="spTripTypes">
        <item>Business</item>
        <item>Holidays</item>
        <item>Other</item>
    </string-array>
    <string name="bNext">Next</string>
    <string name="bAddPerson">Add person</string>
    <string name="bEditPerson">Edit person</string>
    <string name="bDeletePerson">Delete person</string>

    <!-- Create trip multiple places -->
    <string name="etTripPlace">Trip place</string>
    <string name="etdPlaceBegining">Begining date</string>
    <string name="etdPlaceEnd">End date</string>
    <string name="bAddPlace">Add place</string>
    <string name="tvPlaceName">Place name</string>
    <string name="bDeletePlace">Delete place</string>
    <string name="bEditPlace">Edit place</string>
    <string name="etdTripBegining">Begining date</string>
    <string name="etdTripEnd">End date</string>

    <!-- Create expense -->
    <string name="etmExpenseDescription">Expense description</string>
    <string name="etCost" translatable="false">0.0</string>
    <string name="tvCost">Cost</string>
    <string name="tvExpenseType">Expense type</string>
    <string-array name="spExpenseTypes">
        <item>Transportation (airplane / car / bus / train)</item>
        <item>Accomodation (hotel / airbnb / rented home)</item>
        <item>Food and drinks (lunches / dinners / breakfasts)</item>
        <item>Others (souvenirs / concert tickets / sport tickets / museums / etc)</item>
    </string-array>
    <string name="tvSharedExpenseAE">Shared expense</string>
    <string name="rbSharedYesAE">Yes</string>
    <string name="rbSharedNoAE">No</string>
    <string name="bAddExpenseAE">Add expense</string>
    <string name="bCreateTripAE">Create trip</string>
    <string name="bDeleteExpense">Delete expense</string>

</resources>